tests/vendor/valid/trivial/negate.c
//expect 251
//tags: trivial, unary
int main() {
    return -5;
}