tests/vendor/invalid/syntax/missing_semicolon.c
//tags: trivial
int main(void) {
    return -5
}